Added 'the core' music

--- a/src/main/resources/assets/slaycream/lang/en_us.json
+++ b/src/main/resources/assets/slaycream/lang/en_us.json
@@ -1,6 +1,6 @@
 {
-  "item.slaycream.the_core": "The Core",
+  "item.slaycream.the_core_music_disc": "The Core",
+  "item.slaycream.the_core_music_disc.desc": "The Core by Icecream",
   "item.slaycream.big_chungus": "The Chungus",
-
   "itemGroup.slaycream.icecreams_trinkets": "Icecream's Trinkets"
 }
